Updating background gloss for Iphone

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         
         <ul class="nav-links">
             <div>
-                <img src="logo.png" alt="Companyls logo">
+                <img src="logo.png" alt="Company's logo">
             </div>
             <h1>Delivery Codes</h1>
-            <li class="hideOnMobile"><a href="#general">GENERAL</a></li>
+            <li onclick="hideSidebar()" class="hideOnMobile"><a href="#general">GENERAL</a></li>
             <li class="hideOnMobile"><a href="#refrigeration">REFRIGERATION</a></li>
             <li class="hideOnMobile"><a href="#range">RANGE</a></li>
             <li class="hideOnMobile"><a href="#homeLaundry">HOME LAUNDRY</a></li>
