Article travel offset and Sidebar outside click update
Fixed issue with traveling to each article and improved a user friendly interaction by closing Sidebar with only one click outside of it

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul class="sidebar">
             <li onclick="hideSidebar()"><a href="javascript:void(0);"><svg class="close-svg" xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-            <li><a href="#general">GENERAL</a></li>
+            <li><a href="#">GENERAL</a></li>
             <li><a href="#refrigeration">REFRIGERATION</a></li>
             <li><a href="#range">RANGE</a></li>
             <li><a href="#homeLaundry">HOME LAUNDRY</a></li>
@@ -25,7 +25,7 @@
                 <img src="logo.png" alt="Company's logo">
             </div>
             <h1>Delivery Codes</h1>
-            <li onclick="hideSidebar()" class="hideOnMobile"><a href="#general">GENERAL</a></li>
+            <li onclick="hideSidebar()" class="hideOnMobile"><a href="#">GENERAL</a></li>
             <li class="hideOnMobile"><a href="#refrigeration">REFRIGERATION</a></li>
             <li class="hideOnMobile"><a href="#range">RANGE</a></li>
             <li class="hideOnMobile"><a href="#homeLaundry">HOME LAUNDRY</a></li>
