--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav>
         <ul class="sidebar">
-            <li onclick="hideSidebar()"><a href="javascript:void(0);"><svg class="close-svg" xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+            <button onclick="hideSidebar()"><svg class="close-svg" xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></button>
             <li><a href="#">GENERAL</a></li>
             <li><a href="#refrigeration">REFRIGERATION</a></li>
             <li><a href="#range">RANGE</a></li>
@@ -30,7 +30,7 @@
             <li class="hideOnMobile"><a href="#range">RANGE</a></li>
             <li class="hideOnMobile"><a href="#homeLaundry">HOME LAUNDRY</a></li>
             <li class="hideOnMobile"><a href="#dishwasherDisposerCompactor">DISHWASHER | DISPOSER | COMPACTOR</a></li> 
-            <li onclick="showSidebar()"><a href="javascript:void(0);"><svg class="menu-svg" xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            <button onclick="showSidebar()"><svg class="menu-svg" xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#000000"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></button>
         </ul>
     </nav>
 
