--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Delivery Codes</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
+    <link rel="truck icon" href="web-ico.ico">
 </head>
 <body>
 
